feat: add update functionality
